tests/Fail/test6.cm
void nesting (void)
{
	int x; int y; int z;
	x = 3;
	y = 2;
	z = 1;
	if (x > y)
	{
		if (z = x)
		{

		}
		else
		{

		}
	}
	else
	{
		if (y > z)
		{
			else /* This else causes error */
			{

			}
		}
	}
}